budgets page reorganised. div mess solved, top bar representable, alignment fixed

--- a/nuWallet.css
+++ b/nuWallet.css
@@ -477,57 +477,47 @@ body {
 }
 
 .top-progress-bar {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	height:80px;
-	width: 285px;
+	width: 90%;
 	margin-bottom: -30px;
 }
 
 .top-progress-total
 {
 	background-color: #CCCCCC;
-	margin-left: 15px;
 	height:25px;
-
 }
 
 #total-progress-1st {
-	/* background-color: #00E065; */
-	background-color: rgb(0, 122, 255);
+	background-color: #00E065;
 	height:25px;
 	width:9%;
-	margin-bottom: 0px;
 	display: inline-grid;
-
-
 }
 #total-progress-2nd {
-	/* background-color: #00E065; */
-	background-color: #FF6600;
+	background-color: #008EFF;
 	height:25px;
-	width:3%;
-	margin-bottom: 0px;
+	width:20%;
+	margin: 0px;
 	margin-left: -4px;
-	padding-left: 0px;
 	display: inline-grid;
 }
 #total-progress-3rd {
-	/* background-color: #00E065; */
 	background-color: #FFCC00;
 	height:25px;
 	width:17%;
-	margin-bottom: 0px;
 	margin-left: -4px;
 	display: inline-block;
 }
 #total-progress-4th {
-	/* background-color: #00E065; */
-	background-color: #5856D6;
+	background-color: #8000FF;
 	height:25px;
-	width:1%;
-	margin-bottom: 0px;
-	position: relative;
-	bottom: 30px;
-	left: 78px;
+	width:5%;
+	margin-left: -4px;
+	display: inline-grid;
 }
 
 .item-budget-title {
@@ -545,9 +535,9 @@ body {
 }
 
 #progress-fast-food {
-	background-color: #FF6600;
+	background-color: #008EFF;
 	height:16px;
-	width:15%;
+	width:62%;
 
 }
 
@@ -559,15 +549,15 @@ body {
 }
 
 #progress-entertainement {
-	background-color: #5856D6;
+	background-color: #8000FF;
 	height:16px;
-	width:8%;
+	width:46%;
 
 }
 #sub-progress-groceries {
-	background-color: rgb(0, 122, 255);
+	background-color: #00E065;
 	height:16px;
-	width:17%;
+	width:39%;
 }
 .progress-link {
 	color: #7D7D7D;
@@ -1104,8 +1094,8 @@ body {
 	border-width: 1px;
 }
 
-#values-total {
-	margin-top: -29px;
+.values-total {
+	/* margin-left: 10px */
 }
 
 #groceries-category {
